k8s/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-api
                port:
                  number: 8080
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product-api
                port:
                  number: 8081
          - path: /shopping
            pathType: Prefix
            backend:
              service:
                name: shopping-api
                port:
                  number: 8082
